fix(logging): better event stream handling re-using the same connection throughout the stream
